[package]
name = "twig-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.0"
walkdir = "2"
ludtwig-parser = "0.3.3"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }